--- a/order-service-dev.yml
+++ b/order-service-dev.yml
@@ -3,7 +3,7 @@ spring:
     name: order-service
   cloud:
     config:
-      override-none: true
+      override-none: true      #none 没有   不用覆盖
 server:
   port: 8201
 
