--- a/item-service-dev.yml
+++ b/item-service-dev.yml
@@ -4,6 +4,11 @@ spring:
   cloud:
     config:
       override-none: true
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
 
 server:
   port: 8001
@@ -13,4 +18,5 @@ eureka:
     service-url:
       #defaultZone   eureka 服务器地址
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+
 
